--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
 <p>面向对象三大特性：封装、继承、多态<br>在C语言里如果要实现 ：<br>封装：struct实现。</p>
 <p>继承:指针实现，就是把父类包含在结构体中。 </p>
 <p>多态:可以用指针来实现。</p>
+<p>具体可参照:<br> <a href="http://blog.csdn.net/songcdut/article/details/8132609" target="_blank" rel="external">C语言例子</a><br> <a href="http://blog.csdn.net/kennyrose/article/details/7564105" target="_blank" rel="external">C语言例子</a></p>
+<p>引用总结一句话:面向对象从来都是思想，而不是语言! 理解面向对象的编程思想，我们使用C语言这样的较低级的语言也同样可以实现OOP。像c语言用的里面具体用到的有C语言中的宏，结构体，函数指针, 聚合组合等知识。</p>
 
       
     </div>
