--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@
 <p>多态:可以用指针来实现。</p>
 <p>具体可参照:<br> <a href="http://blog.csdn.net/songcdut/article/details/8132609" target="_blank" rel="external">C语言例子</a><br> <a href="http://blog.csdn.net/kennyrose/article/details/7564105" target="_blank" rel="external">C语言例子</a></p>
 <p>引用总结一句话:面向对象从来都是思想，而不是语言! 理解面向对象的编程思想，我们使用C语言这样的较低级的语言也同样可以实现OOP。像c语言用的里面具体用到的有C语言中的宏，结构体，函数指针, 聚合组合等知识。</p>
-<p>接下来我们看看objective-c到底是怎么把c给做到面向对象的：<br>虽然Objective-C是C的超集，但它不视C的基本类型为第一级的对象。bjective-C是扩充C的面向对象编程语言。<br>Objective-C是非常实用的语言。它是一个用C写成、很小的运行库，令应用程序的尺寸增加很小，和大部分OO系统使用极大的VM执行时间会取代了整个系统的运作相反。Objective-C写成的程序通常不会比其原始码大很多。而其函式库(通常没附在软件发行本)亦和Smalltalk系统要使用极大的内存来开启一个窗口的情况相反。因此，Objective-C它完全兼容标准C语言（C++对C语言的兼容仅在于大部分语法上，而在ABI（Application Binary Interface）上，还需要使用extern “C”这种显式声明来与C函数进行兼容），而在此基础上增加了面向对象编程语言的特性以及Smalltalk消息机制。<br>我自己的理解呢就是把C语言写成了一个面向对象思想的运行库，产生objective-c这样的语言。是不是很有意思？多多思考，饮水思源.C语言还是相当重要的，只不过我们平时开发的一些东西，用不到这些细节而已！但是这些东西还是有必要去明白的，因为个人感觉它们才是不变的东西。如果有一天遇到比较庞大的用户量，对细节要求比较严格的时候，它们就可以灵活运用，来实现底层的一些东西，这样对自己的实现某些功能会更加灵活。想想都觉得有魅力，激动啊！  以上只是个人理解，如果有不对的请批评指出，有不同的意见可以提出来一起讨论检验!</p>
+<p>接下来我们看看objective-c到底是怎么把c给做到面向对象的：</p>
+<p>虽然Objective-C是C的超集，但它不视C的基本类型为第一级的对象。</p>
+<p>Objective-C是扩充C的面向对象编程语言。</p>
+<p>Objective-C是非常实用的语言。它是一个用C写成、很小的运行库，令应用程序的尺寸增加很小，和大部分OO系统使用极大的VM执行时间会取代了整个系统的运作相反。Objective-C写成的程序通常不会比其原始码大很多。而其函式库(通常没附在软件发行本)亦和Smalltalk系统要使用极大的内存来开启一个窗口的情况相反。因此，Objective-C它完全兼容标准C语言（C++对C语言的兼容仅在于大部分语法上，而在ABI（Application Binary Interface）上，还需要使用extern “C”这种显式声明来与C函数进行兼容），而在此基础上增加了面向对象编程语言的特性以及Smalltalk消息机制。</p>
+<p>我自己的理解呢就是把C语言写成了一个面向对象思想的运行库，产生objective-c这样的语言。是不是很有意思？多多思考，饮水思源.C语言还是相当重要的，只不过我们平时开发的一些东西，用不到这些细节而已！但是这些东西还是有必要去明白的，因为个人感觉它们才是不变的东西。如果有一天遇到比较庞大的用户量，对细节要求比较严格的时候，它们就可以灵活运用，来实现底层的一些东西，这样对自己的实现某些功能会更加灵活。想想都觉得有魅力，激动啊！  以上只是个人理解，如果有不对的请批评指出，有不同的意见可以提出来一起讨论检验!</p>
 
       
     </div>
@@ -514,7 +518,7 @@
 <p>Cocoa层下面的是<br>Core Foundation 这是一套C API，其中包含了CFNetwork, 这是大多数应用级别的网络代码的基础。CFNetwork在CFStream与CFSocket之上提供给了一个简单的网络接口。这两个类是针对BSD Socket的轻量级封装，后者形成了最下面的层，与无线硬件最为接近。BSD Socket严格使用C 来实现，向开发者提供了与远程设备或服务器进行通信的完全控制能力。</p>
 <p>沿着框架向下移动每一层，你都会获得更为严密的控制，但却失去了上一层提供的易用性与抽象能力，虽然有时是可以的，不过apple建议我们还是要位于CFNetwork层及其之上 。BSD层的原始socket无法访问系统范围的虚拟专用网络，也无法激活Wi-Fi和蜂窝无线电，而这些CFNetwork已经帮我们处理好了。</p>
 <p>所以目前为止，我们大多数还是用Cocoa层和Core Foundation 层这两个比较多。</p>
-<p>Hardware这层关于硬件的暂时先不说 …….</p>
+<p>Hardware这层关于硬件的看图层上面有Cellular(移动电话)、Bluetooth(蓝芽(一种无线传输技术))、Wi-Fi这些实现硬件检测网络状态、关于他们和硬件交互的一些东西(个人理解)</p>
 <p>这篇只是一起简单看一下iOS网络层的组织形式.文章篇幅较短，希望大家都能够深入理解掌握，接下来我们一步一步会进行探讨。大家有什么不懂得就问就思考，可以在下方评论，这样会理解的更加透彻！谢谢支持！Thanks~</p>
 <p>思考：    运行循环？<br>     各种关于网络的API？<br>     响应式的网络应用框架？及其应用场景</p>
 
