--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 <p>   第四要画脑图</p>
 <p>   在iOS这个领域里,可能牵扯到太多太多其他的东西,图形学,视频,音频,文字,硬件,通信,动画等等领域,但是这些他们之前的发展一路过来都是历史,无法去改变,这也就让我们能够学到一成不变的经典,一路过来可以画脑图可以更清楚地了解,这些都是你通往专家的道路.但是毕竟每个人的时间有限,需求也不同,兴趣也不同,所以不管是上面哪一个都是要花大量时间去学习去总结去实践和改良的.所以只能说尽量多学点多掌握些吧,或者选择一个专心研究下去,我还是比较提倡一件事情做完再去做另一件事情的.尤其是专业方面的东西.只是先后顺序而已.</p>
 <p>   总结,最后要说的是多复习,这点就不多说了,就是对以上的进行复习,多磨合,不然上面的就白做了.温故而知新.上面忘记提书了,看书还是很关键的,如果能把薄书读厚,又能把厚书读薄,就真的非常不错了!愿大家早日变成行业精英,都能够更有兴趣更好的成长,升职 加薪 出任ceo 赢取白富美.</p>
-<p><img src="http://jiecoding.github.io/blogImages/donateMe.png"></p>
+<p><img src="http://jiecoding.github.io/blogImages/donateMe.png"><br><img src="http://jiecoding.github.io/blogImages/88zhifuD.png"></p>
 <p>iOS非闲聊研讨群:328218600</p>
 
       
